--- a/.env
+++ b/.env
@@ -15,6 +15,7 @@ NEXT_PUBLIC_API_URL=http://localhost:5000
 CHOKIDAR_USEPOLLING=true
 WATCHPACK_POLLING=true
 NEXT_PUBLIC_SDK_KEY=7VPbpF9S2GAPxE_rQmkQ
+NEXT_PUBLIC_API_BASE_URL=http://localhost:3000
 
 
 
